# wordcut-0.5.1b2

./: .gitattributes  .gitignore  Makefile.am  Makefile.in  autogen.sh  configure  configure.ac  configure.scan
.github/workflows/: codeql.yml
data/: Makefile.in
docs/: Makefile.in
wordcut/: Makefile.am  Makefile.in  wordcut.c  wordcut.h  wordcut_cli.c  wordcut_dict.c  wordcut_dict.h  wordcut_dict_dump.c  wordcut_mkdict.c  xmalloc.c  xmalloc.h
